CIV-5793 ensure we add evidence